Actualizando archivo .ipynb del analisis

--- a/Code/Monografia_entrega_2.ipynb
+++ b/Code/Monografia_entrega_2.ipynb
@@ -2385,6 +2385,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_outliers_nan.to_parquet(\"dataset_final_procesada.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
